--- a/aboutus.html
+++ b/aboutus.html
@@ -511,7 +511,7 @@
           <span></span>
         </button>
         <ul class="nav-menu" id="navMenu">
-          <li><a href="index.html" class="nav-link">Home</a></li>
+          <li><a href="home.html" class="nav-link">Home</a></li>
           <li><a href="aboutus.html" class="nav-link active">About</a></li>
           <li><a href="services.html" class="nav-link">Services</a></li>
           <li><a href="gallery.html" class="nav-link">Gallery</a></li>
