commit 8: updated shop page

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <style>
     :root {
       --beige-100: #f6f1e7;
-      --beige-200: #e9dfd2;
+      --beige-200: #bfb4b4;
       --beige-300: #d6c6b5;
       --rose-400: #c68a83;
       --gold-400: #d4a66a;
